Project1/src/objects/Line_item__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_statement__c</fullName>
        <label>Invoice statement</label>
        <referenceTo>Invoice_statement__c</referenceTo>
        <relationshipLabel>Line items</relationshipLabel>
        <relationshipName>Line_items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Line items</relationshipLabel>
        <relationshipName>Line_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Sold__c</fullName>
        <label>Unit Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Line item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Line item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>